syntax = "proto2";

enum Role {
    HUB = 0x01;
    PROVIDER = 0x02;
    BOTH = 0x03;
};


message Hello {
    required Role role = 1;
    optional string node_name = 2;
    required bytes node_id = 3;
    required bytes instance_id = 4;
    optional string version = 5;

    optional string os = 10;
    optional uint64 max_ram = 11;
    optional uint64 max_storage = 12;

    repeated string exec_envs = 13;
}

message HelloReply {
    required Role role = 1;
    optional string node_name = 2;
    required bytes node_id = 3;
    optional string version = 4;

    optional int32 max_ping_ms = 20;
}

enum RpcStatus {
    Request = 0;
    Reply = 1;
    Event = 2;
    NoDestination = 100;
    BadFormat = 101;
};

message RpcMessage {
    required bytes message_id = 1;
    required bytes destination_id = 2;
    optional bytes reply_to = 5;
    optional bytes correlation_id = 3;
    optional uint64 ts = 10;
    optional uint64 expires = 11;
    required RpcStatus status = 4;
    optional string payload = 20; // json
}